--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -375,10 +375,23 @@ main {
   border-color: #7fdc72;
 }
 
+.ss-report-modal-theme .form-control[type="file"] {
+  padding: 0;
+  min-height: 46px;
+  line-height: 44px;
+  overflow: hidden;
+}
+
 .ss-report-modal-theme .form-control[type="file"]::file-selector-button {
   background-color: #f4b63f;
   border: 0;
   color: #0d253d;
+  margin: 0;
+  margin-right: 1rem;
+  height: 46px;
+  padding: 0 1rem;
+  border-right: 1px solid rgba(13, 37, 61, 0.14);
+  font-weight: 600;
 }
 
 .ss-report-modal-theme .form-control[type="file"]::file-selector-button:hover {
@@ -946,13 +959,14 @@ main {
   .ss-report-modal-theme .form-control[type="file"] {
     padding: 0;
     min-height: 46px;
-    line-height: 1.2;
+    line-height: 44px;
     overflow: hidden;
   }
 
   .ss-report-modal-theme .form-control[type="file"]::file-selector-button {
     margin: 0;
-    height: 44px;
+    margin-right: 1rem;
+    height: 46px;
     padding: 0 0.65rem;
     border-right: 1px solid rgba(13, 37, 61, 0.14);
     font-size: 0.9rem;
